# stand-up-comedy

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
notebooks/: eda.ipynb  gpt2.ipynb  gpt2_train_with_colab.ipynb
notebooks/.ipynb_checkpoints/: eda-checkpoint.ipynb  gpt2-checkpoint.ipynb
scripts/: add_features.py  push_data_to_gdrive.py
stand_up_comedy/: .env  constants.py  data.py  db.py  exceptions.py  logger.py  model.py  preprocessing.py  train_pl.py  util.py
stand_up_comedy/model/: train.py
tests/: test_stand_up_comedy.py
